# big-integer

./: CMakeLists.txt
lib/BigInt/: CMakeLists.txt
lib/BigInt/include/: BigInt.h
lib/BigInt/src/: BigInt.cpp
lib/BigInt/test/: CMakeLists.txt  tests-bigint.cpp
src/: main.cpp
